--- a/templates/result.html
+++ b/templates/result.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="px-4 py-8 sm:px-8 flex-col flex items-center gap-10">
-      <p class="text-center	font-bold text-xl	">Thông tin chuỗi query string</p>
+      <p class="text-center font-bold text-xl">Thông tin chuỗi query string</p>
       <table
         class="border-collapse w-1/3 border border-slate-400 bg-white text-sm shadow-sm"
       >
@@ -26,6 +26,7 @@
         </thead>
         <tbody id="table-body"></tbody>
       </table>
+      <button type="button" onclick="backToDemo()" class="text-lg decoration-solid underline">Trở về trang Demo</button>
     </div>
     <script>
       // Sử dụng window.location.search để lấy query string
@@ -64,9 +65,11 @@
         row.appendChild(valueCell);
 
         tableBody.appendChild(row);
-        console.log("Key: " + key + ", Value: " + value);
       });
-      v;
+      function backToDemo() {
+        window.location.href = "http://localhost:8000/"
+      }
     </script>
   </body>
 </html>
+
